# handin-website

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  SLICES.md  coding-style.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/app/: auth.py  config.py  database.py  main.py  models.py
backend/app/routes/: assets.py  auth.py  pages.py  segments.py  site.py  team.py
backend/app/services/: asset_service.py  page_service.py  segment_service.py  site_service.py  team_service.py
backend/tests/: conftest.py  test_assets.py  test_concurrent.py  test_database.py  test_routes.py  test_services.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/admin/: AddSegmentModal.vue  AdminToolbar.vue  AssetUploader.vue  RichTextEditor.vue  SegmentEditor.vue  TokenPrompt.vue
frontend/src/components/layout/: AppShell.vue  MobileHeader.vue  Sidebar.vue  SidebarNav.vue
frontend/src/components/segments/: AudioSegment.vue  GallerySegment.vue  IframeSegment.vue  (+7 more)
frontend/src/composables/: useAdmin.ts  useAssetUpload.ts  useDarkMode.ts  usePages.ts  useSegments.ts  useTeamMembers.ts
frontend/src/router/: index.ts
frontend/src/types/: segment.ts  vuedraggable.d.ts
frontend/src/utils/: formatApa.ts
frontend/src/views/: HomePage.vue  PageView.vue  TeamPage.vue
prompts/: slice-1-database-models.md  slice-2-segment-service.md  slice-3-api-routes.md  slice-4-assets-docker.md  slice-5-frontend-shell.md  slice-6-admin-ui.md  slice-7-polish.md
scripts/: entrypoint.sh
